--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,6 @@
     "@noir-lang/backend_barretenberg": "^0.32.0",
     "@noir-lang/noir_js": "^0.32.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "plaid": "^27.0.0"
+    "express": "^4.18.2"
   }
 }
