--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,34 @@
 {
-  "name": "zk-property-test-server",
+  "name": "zk-workspace-api",
   "version": "0.1.0",
+  "private": true,
   "type": "module",
   "scripts": {
-    "dev": "node src/index.js"
+    "dev": "ts-node-dev --esm --respawn --transpile-only src/main.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/main.js",
+    "lint": "eslint --ext .ts src",
+    "test": "npx vitest run"
   },
   "dependencies": {
-    "@aztec/bb.js": "^0.32.0",
-    "@noir-lang/backend_barretenberg": "^0.32.0",
-    "@noir-lang/noir_js": "^0.32.0",
+    "bullmq": "^5.7.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "plaid": "^27.0.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
+    "pg": "^8.11.5",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.30",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "pg-mem": "^3.0.5",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.4.2",
+    "vitest": "^1.6.0"
   }
 }
